--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ Cargo.lock
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+./jna-5.16.0.tar.gz
+
+./jna-5.16.0
+
+./java/Main.class
+
+./java/RustLib.class
