--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,7 @@ Cargo.lock
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-./jna-5.16.0.tar.gz
-
-./jna-5.16.0
-
-./java/Main.class
-
-./java/RustLib.class
+jna-5.16.0.tar.gz
+jna-5.16.0
+java/Main.class
+java/RustLib.class
